# Calculator

./: CMakeLists.txt  main.cpp
lib/: main_tests.cpp
